--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -142,7 +142,7 @@ Use `.text-details` to separate details from body text.
 // 1. Clear line-height for clamped text.
 //    NOTE: Tested on iOS Safari. Set .ios override class if needed to set something else as default.
 .text-clamped {
-  line-height: initial; // [1]
+  line-height: @grid-vertical-half; // [1]
 }
 
 .text-teaser {
