--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -556,15 +556,15 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 .group-mixed--left {
   padding-right: @padding-inner-group-mixed;
 
-  a,
-  input[type="checkbox"] + label,
-  div {
+  & > a,
+  & > input[type="checkbox"] + label,
+  & > div {
     padding-left: @grid-horizontal; /* [1] */
     height: @grid-vertical;         /* [1] */
   }
-  a,
-  input[type="checkbox"] + label:before,
-  span {
+  & > a,
+  & > input[type="checkbox"] + label:before,
+  & > span {
     line-height: @grid-vertical;
   }
 }
@@ -698,7 +698,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 
 // 1. Set vertical-align: baseline so that checkbox and navigation arrow icon is aligned to the first row of
 //    text inside .group-mixed--middle.
-// 2. Align vertically with textarea in .group-mixed---middle
+// 2. Increase click area and align vertically with textarea in .group-mixed---middle
 //    Checkbox icon is 28px, .group-mixed default height is 44px, use remaining 16 px for padding.
 //    NOTE: Checkbox icon height is stored into @size-checkbox.
 // 3. Checkbox icon determines height.
@@ -710,10 +710,9 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
     vertical-align: baseline;  // [1]
   }
   .group-mixed--left {
-    padding-top: @group-mixed--left-vertical-padding + 1px;     // [2]
-    padding-bottom: @group-mixed--left-vertical-padding - 1px;  // [2]
-    label {
-      height: 100%; // [3]
+    & > input[type="checkbox"] + label {
+      padding-top: @group-mixed--left-vertical-padding + 1px;     // [2]
+      padding-bottom: @group-mixed--left-vertical-padding - 1px;  // [2]
       &:before {
         line-height: initial; // [4]
       }
@@ -726,16 +725,20 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
 }
 
 // FIXME: move (overrides.less)
-// 1. Center vertically. Supports single line, multiline and clamped text.
-// 2. Make sure clamped and unclamped span inside a tag has the same height with display: block.
+// 1. Set height for clickable icon inside .group-mixed--left.
+// 2. Center vertically. Supports single line, multiline and clamped text.
+// 3. Make sure clamped and unclamped span inside a tag has the same height with display: block.
 .group-mixed.vertically-centered {
-  .group-mixed--left, .group-mixed--middle {
-    padding-top: @padding-vertically-centered;    // [1]
-    padding-bottom: @padding-vertically-centered; // [1]
+  .group-mixed--left {
+    & > a > span {
+      height: @grid-vertical; // [1]
+    }
   }
   .group-mixed--middle {
+    padding-top: @padding-vertically-centered;    // [2]
+    padding-bottom: @padding-vertically-centered; // [2]
     & > span {
-      display: block; // [2]
+      display: block; // [3]
     }
   }
 }
