--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -361,9 +361,13 @@ Icon texts
 .text-star.inverse:after{
   color: @color-text-inverse;
 }
+
+.text-star.small {
+  line-height: @grid-vertical-half;
+}
+
 .text-star.small:after{
   font-size: @size-icon-star-small;
-  vertical-align: top;
 }
 .text-star.inactive:after {
   color: @color-text-downplayed;
