--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -8,7 +8,6 @@ TODO: em grid structure explained in plain English (when new grid structure deci
 */
 
 @height-heading: 70px;
-@height-container-toolbar: @grid-vertical * 1.3;
 @height-landscape-max: 769px;
 @t-max: 1025px;
 @width-max: 1025px;
@@ -98,9 +97,15 @@ Menu
 }
 
 // FIXME: comment and refactor
+// 1. Sticky footer, margin-bottom is the negative value of the footer's height.
+// 2. Set margin-top for first-child of .container-menu to align vertically with toolbar.
+//    FIXME:  Only needed in @media (max-height: @height-landscape-max)
+// 3. Center vertically.
+// 4. Increase click area with padding-bottom.
+//    FIXME: Can not be more than 5px because vertical position of .separate depends on this.
 .container-menu--top {
   min-height: 100%;
-  margin: 0 auto -@height-menu-footer; /* the bottom margin is the negative value of the footer's height */
+  margin: 0 auto -@height-menu-footer;  // [1]
   .separate {
     // use this to separate link elements from other
     line-height: 84px;
@@ -110,9 +115,9 @@ Menu
     }
   }
   .link-menu:first-child {
-    padding-top: 15px;
-    line-height: @grid-vertical;
-    padding-bottom: 12px;
+    margin-top: @margin-top-heading;            // [2]
+    padding-top: @padding-vertically-centered;  // [3]
+    padding-bottom: 5px;                        // [4]
   }
   .link-menu-small {
     line-height: @grid-vertical;
@@ -311,15 +316,6 @@ Vertically center .container-master and .container-editor in large screens
   -webkit-overflow-scrolling: touch;  // [1]
   height: 100%;
   overflow-y: auto;
-}
-
-/*
-`.container-tooblar` specifies height for toolbar.
-*/
-
-// 1. Override @grid-vertical height.
-.container-toolbar {
-  height: @height-container-toolbar;  // [1]
 }
 
 /*
@@ -919,9 +915,12 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
   padding-left: @group-symmetrical-edge-padding-to-center;
 }
 
-// 1. Set height for large .group-symmetrical. Overrides default height.
+@margin-top-heading: 9px;
+
+// 1. Set margin-top for large .group-symmetrical to add space on top of it.
+//    FIXME:  Only needed in @media (max-height: @height-landscape-max)
 .group-symmetrical.height-large {
-  margin-top: (@height-container-toolbar - @grid-vertical) / 1;
+  margin-top: @margin-top-heading;  // [1]
 }
 
 .group-symmetrical--middle.width-large {
