--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -284,21 +284,33 @@ Icon texts
 
 
 
+// 1. Set dimensions for .text-logo.
+// 2. Override default vertical-align and ertically align with text.
+//    NOTE: This has to be AFTER .set-icon-font().
 .text-logo {
-  font-size: @size-icon-logo;
-  line-height: @size-icon-logo;
+  font-size: @size-icon-logo;   // [1]
+  line-height: @size-icon-logo; // [1]
+  height: @size-icon-logo;      // [1]
+  display: block;               // [1]
   &:after {
-    .set-icon-font;
+    .set-icon-font();
+    vertical-align: baseline; // [2]
     color: @color-text;
     content: @icon-logo-only;
   }
 }
 
+// 1. Set dimensions for .text-menu.
+// 2. Override default vertical-align and ertically align with text.
+//    NOTE: This has to be AFTER .set-icon-font().
 .text-menu {
-  font-size: @size-icon-menu;
-  line-height: @size-icon-menu;
+  font-size: @size-icon-menu;   // [1]
+  line-height: @size-icon-menu; // [1]
+  height: @size-icon-menu;      // [1]
+  display: block;               // [1]
   &:after {
-    .set-icon-font;
+    .set-icon-font();
+    vertical-align: baseline; // [2]
     color: @color-text;
     content: @icon-menu;
   }
