--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -27,7 +27,9 @@ TODO: em grid structure explained in plain English (when new grid structure deci
   position: relative; // [2]
 }
 
-// FIXME: move
+// FIXME:
+//   i. move
+//  ii. overflow: hidden causes flicker in vertical swiper (focus/tasks)
 // 1. Minimize paint when editor is open and .container-master and .container-menu are stacked beneath.
 //    At least absolutely positioned elements inside these classes would repaint and slow down swiping in
 //    editor swiper.
