Active color for completed tasks toggle

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -330,6 +330,9 @@ Icon texts
     content: @icon-show-completed;
   }
 }
+.active > .text-toggle-completed:after {
+  color: @color-text;
+}
 
 .text-plus {
   font-size: @size-icon-plus;
