--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -739,7 +739,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
     padding-top: @padding-vertically-centered;    // [8]
     padding-bottom: @padding-vertically-centered; // [8]
   }
-  .group-mixed--right span.text-star.small {
+  .group-mixed--right span.icon-star.small {
     padding-top: @padding-vertically-centered - 1;    // [9]
     padding-bottom: @padding-vertically-centered + 1; // [9]
   }
@@ -762,7 +762,7 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   .group-mixed--right > a {
     height: @grid-vertical-medium;       // [1]
     line-height: @grid-vertical-medium;  // [1]
-    & > span.text-star.small {
+    & > span.icon-star.small {
       line-height: @grid-vertical-small;
       padding-top: 4px - 1px;
       padding-bottom: 4px + 1px;
