Added arrows to datepicker on tablet/desktop

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -178,3 +178,19 @@ Icon classes
   }
 }
 
+.icon-arrow-left, .icon-arrow-right {
+  &:after {
+    .set-icon-font;
+    color: @color-text-downplayed;
+    font-size: @size-icon-arrow-small;
+    vertical-align: middle;
+  }
+}
+
+.icon-arrow-left:after {
+  content: @icon-arrow-left;
+}
+
+.icon-arrow-right:after {
+  content: @icon-arrow-right;
+}
