Vertically aligned calendar icon in task editor footer.

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -136,8 +136,10 @@ Icon classes
 }
 
 .icon-calendar {
+  display: block;
   &:after {
     .set-icon-font;
+    vertical-align: baseline;
     color: @color-icon-deactivated;
     content: @icon-calendar;
     font-size: 23px;
